# SearchCandy-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
tgm_sdk/: __init__.py  client.py  exceptions.py
