[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tgm"
version = "0.2.0"
description = "Python SDK for SearchCandy — The Hippocampus of AI. Self-organizing knowledge graph for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SearchCandy Labs"},
]
keywords = ["searchcandy", "knowledge-graph", "rag", "ai-agents", "retrieval", "context-window", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://searchcandy-labs.com"
Documentation = "https://docs.searchcandy-labs.com"
Repository = "https://github.com/searchcandy-labs/searchcandy-python"
Issues = "https://github.com/searchcandy-labs/searchcandy-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tgm_sdk*"]
